--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,10 +28,8 @@ jobs:
       - run:
           name: Deploy to Railway App
           command: |
-            cd bankchurn-api 
-            echo $RAILWAY_TOKEN | railway login --token=$(echo $RAILWAY_TOKEN)
-            railway link -p 751a5334-a526-4a18-bc98-9d530a98be03 -s e9881c2e-5ba1-4a09-b64d-6f021fbc1905
-            railway up --detach
+            cd bankchurn-api
+            railway up --service=e9881c2e-5ba1-4a09-b64d-6f021fbc1905 -d
 
 tags_only: &tags_only
   filters:
